src/test/c/accept/04-multiline-comment.arcx
#!
	A multiline comment.
!#
var:int;