src/test/c/reject/05-open-comment.arcx
int:a=3;
#! An open comment that never ends...
